fix page collapsing

--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ footer a {
 .row img {
 	display: block;
 	width: 20%;
-	height: 20%;
+	min-height: 20%;
 	float: left;
 
 	margin-right: 1em;
@@ -172,7 +172,7 @@ footer a {
 }
 
 .project-cell {
-	padding: 0px auto 0px auto;
+	padding: 0 auto 0 auto;
 	max-width: 20em;
 
 	margin-left: auto;
@@ -189,6 +189,7 @@ footer a {
 
 	text-align: center;
 	font-size: 18px;
+	min-height: 24px;
 
 	border-bottom: 1px solid;
 }
@@ -200,6 +201,7 @@ footer a {
 
 	text-align: center;
 	font-size: 12px;
+	min-height: 17px;
 
 	border-bottom: 1px solid;
 }
@@ -211,6 +213,7 @@ footer a {
 
 	text-align: center;
 	font-size: 12px;
+	min-height: 17px;
 
 	border-bottom: 1px solid;
 }
